# MusePartition

./: .gitignore  00_SYNTHESE_COMPLETE.md  ARCHITECTURE.md  INDEX.md  INSTALL_GUIDE.md  README.md  config.example.json  config.json  pytest.ini  requirements.txt  setup.py  setup.sh
docs/: API_SUMMARY.md  ARCHITECTURE.md  ARCHITECTURE_PHASE1.md  ARCHITECTURE_PHASE2.md  SESSION5_COMPLETE.md  SESSION_1_README.md  SUMMARY.txt
docs/phase1/: RESUME_FINAL_SESSION2.md  SESSION2_IMPROVEMENTS.md  SESSION3_COMPLETE.md  SESSION4_COMPLETE.md  SESSION6_COMPLETE.md  SESSION_1_RESUME.md  SESSION_LOG.md
musepartition-core/: README.md  cli.py  pyproject.toml  setup.py
musepartition-core/musepartition_core/: __init__.py  audio_processor.py  note_segmenter.py  pipeline.py  pitch_detector.py  quantizer.py  utils.py
musepartition-core/tests/: test_score_generator.py
musepartition-server/: README.md  requirements.txt  setup.py
src/: __init__.py  audio_processor.py  note_segmenter.py  pitch_detector.py  quantizer.py  score_generator.py  transcription_pipeline.py  types.py  utils.py
tests/: __init__.py  test_audio_processor.py  test_cli.py  test_note_segmenter.py  test_pipeline.py  test_pitch_detector.py  test_quantizer.py  test_utils.py
